# ospo-stats

./: .gitignore  README.md  gh.py  pyproject.toml  report_v0.ipynb  requirements.txt  sample.env
.devcontainer/: devcontainer.json
data/github/csv/: GitHub Repositories (Wisconsin).csv  GitHub Repositories (Wisconsin, Cleaned with Illustrated READMEs and Homepages).csv  GitHub Repositories (Wisconsin, Cleaned).csv  GitHub Repositories (Wisconsin, Cleaned, with Homepages).csv  GitHub Repositories (Wisconsin, Cleaned, with Illustrated READMEs).csv  GitHub Repositories (Wisconsin, Cleaned, with Illustrated READmes, Hompages, and Licenses).csv  GitHub Repositories (Wisconsin, Cleaned, with READMEs).csv  GitHub Repositories (wisc.edu).csv  GitHub Users (Wisconsin).csv  GitHub Users (wisc.edu).csv
data/github/json/: Example GitHub Repository.json  Example GitHub User.json
data/gitlab/csv/: GitLab Repositories (DoIT).csv
data/gitlab/json/: project.json  projects.json
notebooks/: export_table.ipynb  keyword_confusion_matrix.ipynb  plot_repo_by_year.ipynb  plots.ipynb  push_gitlab_repos.ipynb  report_v0.ipynb  turso_example.ipynb
ospo_stats/: db.py  enrich.py  gh.py  llm.py  parser.py  query.py  visualize.py
ospo_stats/github/: crawl.py  parser.py  query.py
ospo_stats/gitlab/: parser.py
scripts/: install_turso.sh
src/github/bash/: fetch_dsi_repositories.sh  fetch_repositories.sh  fetch_users.sh
src/github/php/: fetch_dsi_repositories.php  fetch_repositories.php  fetch_users.php
src/github/python/: fetch_dsi_repositories.py  fetch_repositories.py  (+1 more)
(+22 files in other folders)
